--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BusMall</title>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   
   <div id="imageContainer">
-    <img id="image_left" src="" alt="">
-    <img id="image_middle" src="" alt="">
-    <img id="image_right" src="" alt="">
+    <img id="left_image" src="" alt="">
+    <img id="middle_image" src="" alt="">
+    <img id="right_image" src="" alt="">
   </div>
 
 </body>
+<script src="./js/app.js"></script>
 </html>
