--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <img id="right_image" src="" alt="">
   </div>
 
+    <div id="results">
+      
+    </div>
+
 </body>
 <script src="./js/app.js"></script>
 </html>
