started progress  on random number generator to display X amount of images

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <img id="right_image" src="" alt="">
   </div>
 
-    <div id="results">
-      
-    </div>
+    <div id="results"></div>
+
+    <div id="stretch"></div>
 
 </body>
 <script src="./js/app.js"></script>
