--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
 
     <div id="results"></div>
 
+    <div id="chartDiv">
+      <canvas id="myChart" width="900" height="800"></canvas>
+    </div>
+
     <div id="stretch"></div>
+    
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 <script src="./js/app.js"></script>
+
 </html>
