added 2 seperate data types to bar chart

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <img id="right_image" src="" alt="">
   </div>
 
-    <div id="results"></div>
-
-    <div id="chartDiv">
-      <canvas id="myChart" width="900" height="800"></canvas>
+    <div id="results">
+      <div id="chartDiv">
+        <canvas id="myChart" width="1000" height="800"></canvas>
+      </div>
     </div>
+
+    
 
     <div id="stretch"></div>
     
