added second bar chart handling conversion ratio

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       </div>
     </div>
 
+    <div id="chartDiv2">
+      <canvas id="conversionChart" width="1000" height="800"></canvas>
+    </div>
+
     
 
     <div id="stretch"></div>
