--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BusMall</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-  
-  <div id="imageContainer">
-    <img id="left_image" src="" alt="">
-    <img id="middle_image" src="" alt="">
-    <img id="right_image" src="" alt="">
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>BusMall</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <div id="imageContainer">
+      <img id="left_image" src="" alt="" />
+      <img id="middle_image" src="" alt="" />
+      <img id="right_image" src="" alt="" />
+    </div>
 
     <div id="results">
       <div id="chartDiv">
         <canvas id="myChart" width="1000" height="800"></canvas>
       </div>
       <div id="chartDiv2">
-          <canvas id="conversionChart" width="1000" height="800"></canvas>
-        </div>
+        <canvas id="conversionChart" width="1000" height="800"></canvas>
+      </div>
     </div>
-    
-</body>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-<script src="./js/app.js"></script>
-
+  </body>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script src="./js/app.js"></script>
 </html>
